unpackaged/main/default/objects/Lead/fields/How_did_you_hear_about_ECCHO_Rules__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_hear_about_ECCHO_Rules__c</fullName>
    <label>How did you hear about ECCHO Rules?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ECCHO Member</fullName>
            </value>
            <value>
                <fullName>ECCHO Employee</fullName>
            </value>
            <value>
                <fullName>Conference/Seminar/Session</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Publication</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>