unpackaged/main/default/objects/Lead/fields/Other_Reason_for_Interest_in_ECCHO_Rules__c.field-meta.xml
<CustomField>
    <fullName>Other_Reason_for_Interest_in_ECCHO_Rules__c</fullName>
    <label>Other Reason for Interest in ECCHO Rules</label>
    <type>TextArea</type>
</CustomField>