unpackaged/main/default/objects/Lead/fields/Please_Specify__c.field-meta.xml
<CustomField>
    <fullName>Please_Specify__c</fullName>
    <label>Please Specify</label>
    <type>TextArea</type>
</CustomField>