unpackaged/main/default/objects/Lead/fields/Primary_RTN__c.field-meta.xml
<CustomField>
    <fullName>Primary_RTN__c</fullName>
    <description>Primary RTN</description>
    <label>Primary RTN</label>
    <length>9</length>
    <type>Text</type>
</CustomField>