unpackaged/main/default/objects/Lead/fields/Provided_RTN__c.field-meta.xml
<CustomField>
    <fullName>Provided_RTN__c</fullName>
    <label>Provided RTN</label>
    <type>TextArea</type>
</CustomField>