unpackaged/main/default/objects/Lead/fields/System_Access_requested__c.field-meta.xml
<CustomField>
    <fullName>System_Access_requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>System Access requested</label>
    <type>Checkbox</type>
</CustomField>