unpackaged/main/default/objects/Lead/fields/What_is_your_interest_in_ECCHO_Rules__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_interest_in_ECCHO_Rules__c</fullName>
    <label>What is your interest in ECCHO Rules?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interested in possibly becoming an ECCHO Member</fullName>
            </value>
            <value>
                <fullName>Interested in possibly becoming an ECCHO Sponsoring Organization</fullName>
            </value>
            <value>
                <fullName>ECCHOEd/Education</fullName>
            </value>
            <value>
                <fullName>Rules Access</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>