unpackaged/main/default/objects/Lead/listViews/Copy_of_Today_s_Leads.listView-meta.xml
<ListView>
    <fullName>Copy_of_Today_s_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>Primary_RTN__c</columns>
    <columns>Provided_RTN__c</columns>
    <filterScope>Everything</filterScope>
    <label>Leads all Time</label>
</ListView>